# deEHR

./: .bestpractices.json  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md
.claude/: claude-security-guidance.md  security-patterns.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  security.yml
apps/: README.md
apps/patient-mobile/: README.md
apps/patient-web/: README.md
apps/provider-portal/: README.md
contracts/: Cargo.toml  README.md
contracts/anchor-registry/: Cargo.toml
contracts/anchor-registry/src/: lib.rs
contracts/consent-registry/: Cargo.toml
contracts/consent-registry/src/: lib.rs
contracts/credential-registry/: Cargo.toml
contracts/credential-registry/src/: lib.rs
contracts/identity-registry/: Cargo.toml  README.md
contracts/identity-registry/interaction/: deploy_testnet.sh
contracts/identity-registry/meta/: Cargo.toml
contracts/identity-registry/meta/src/: main.rs
contracts/identity-registry/src/: lib.rs
contracts/identity-registry/tests/: identity_registry_whitebox_test.rs
contracts/identity-registry/wasm/: Cargo.toml
contracts/identity-registry/wasm/src/: lib.rs
deploy/: README.md
deploy/docker/: README.md
deploy/k8s/: README.md
deploy/terraform/: README.md
docs/architecture/: README.md  README.pt-BR.md  adr-0001-identity-and-key-management.md  adr-0001-identity-and-key-management.pt-BR.md  adr-0002-on-chain-registry-design.md  adr-0002-on-chain-registry-design.pt-BR.md  adr-0003-branching-and-release-model.md  adr-0003-branching-and-release-model.pt-BR.md  adr-0004-did-klever-method.md  adr-0004-did-klever-method.pt-BR.md  adr-0005-fhir-profile-selection.md  adr-0005-fhir-profile-selection.pt-BR.md  adr-0006-multi-consumer-profile-strategy.md  adr-0006-multi-consumer-profile-strategy.pt-BR.md  adr-0007-patient-identity-resolution.md  adr-0007-patient-identity-resolution.pt-BR.md  adr-template.md  adr-template.pt-BR.md
docs/pt-BR/: README.md
docs/requirements/: consumer-profile-heterogeneity.md  consumer-profile-heterogeneity.pt-BR.md  patient-identity-resolution.md  patient-identity-resolution.pt-BR.md
docs/security/: threat-model.md  threat-model.pt-BR.md
services/: README.md
services/auth-server/: README.md
services/consent-relayer/: README.md
tools/: README.md
(+2 files in other folders)
