[package]
name = "deehr-credential-registry"
description = "deEHR Credential Registry — Klever KVM smart contract (skeleton)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

# klever-vm-sdk-rs to be added once contract wiring is verified
# (see issue #8 — ADR-0002 open questions).
[dependencies]
